classDiagram
    direction TB

    class Task {
        +str title
        +int duration_minutes
        +str priority
        +str pet_name
        +str preferred_time
        +int deadline_minutes
        +date due_date
        +str notes
        +bool completed
        +str recurrence
        +int priority_weight
        +int time_order
        +is_due(today) bool
        +mark_complete(today) Task
    }

    class Pet {
        +str name
        +str species
        +int age_years
        +str size
        +List preferences
        +List~Task~ tasks
    }

    class Owner {
        +str name
        +int availability_minutes
        +List~Pet~ pets
        +List~Task~ tasks
        +List preferred_pet_types
        +str notes
        +add_pet(pet) None
        +add_task(task) None
    }

    class ScheduledTask {
        +Task task
        +int start_minute
        +int end_minute
        +str reason
    }

    class SchedulePlan {
        +Owner owner
        +Pet pet
        +List~ScheduledTask~ scheduled_tasks
        +List~Task~ unassigned_tasks
        +int total_duration_minutes
        +str explanation
        +List warnings
        +add_task(scheduled_task) None
        +add_unassigned_task(task) None
        +add_warning(warning) None
    }

    class PawPalScheduler {
        +Owner owner
        +Pet pet
        +List~Task~ tasks
        +add_task(task) None
        +mark_task_complete(task, today) Task
        +filter_tasks(pet_name, completed, recurrence) List~Task~
        +filter_tasks_by_completion_or_pet(pet_name, completed) List~Task~
        +sort_tasks_by_time(tasks) List~Task~
        +build_daily_schedule(today) SchedulePlan
        +explain_plan(plan) str
        +detect_conflicts(plans)$ List~str~
    }

    class detect_conflicts {
        <<function>>
        +__call__(plans) List~str~
    }

    Owner "1" --> "0..*" Pet : owns
    Owner "1" --> "0..*" Task : tracks

    Pet "1" --> "0..*" Task : has

    PawPalScheduler "1" --> "1" Owner : references
    PawPalScheduler "1" --> "1" Pet : manages for
    PawPalScheduler "1" --> "0..*" Task : schedules
    PawPalScheduler ..> SchedulePlan : builds

    SchedulePlan "1" --> "1" Owner : belongs to
    SchedulePlan "1" --> "1" Pet : planned for
    SchedulePlan "1" --> "0..*" ScheduledTask : contains
    SchedulePlan "1" --> "0..*" Task : unassigned

    ScheduledTask "1" --> "1" Task : wraps

    Task ..> Task : mark_complete() creates next

    detect_conflicts ..> SchedulePlan : reads
    detect_conflicts ..> PawPalScheduler : delegates to